--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.petrifiednightmares</groupId>
+            <groupId>com.skelril</groupId>
             <artifactId>pitfall</artifactId>
-            <version>1.7-SNAPSHOT</version>
+            <version>2.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
