--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         </repository>
         <repository>
             <id>sk89q-repo</id>
-            <url>http://maven.sk89q.com/repo</url>
+            <url>http://maven.sk89q.com/artifactory/libs-snapshot-local</url>
         </repository>
         <repository>
             <id>md_5-rep</id>
