Update EngineHub dependencies for 1.13

--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,13 @@ dependencies {
     compile group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.13.2-R0.1-SNAPSHOT'
     compile group: 'org.bukkit', name: 'craftbukkit', version: '1.13.2-R0.1-SNAPSHOT'
 
-    compile group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '6.1.*'
-    compile group: 'com.sk89q', name: 'worldguard', version: '6.1'
-    compile group: 'com.sk89q', name: 'commandbook', version: '2.3.1-SNAPSHOT'
+    compile group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.1.0-SNAPSHOT'
+    compile group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
+    compile(group: 'com.sk89q', name: 'commandbook', version: '2.3.1-SNAPSHOT') {
+        exclude group: 'com.sk89q', module: 'worldedit'
+    }
     compile(group: 'com.sk89q.craftbook', name: 'craftbook', version: '3.9-SNAPSHOT') {
+        exclude group: 'com.sk89q', module: 'worldguard'
         exclude group: 'org.spigotmc', module: 'spigot-api'
         exclude group: 'org.spigotmc', module: 'spigot'
     }
@@ -70,7 +73,9 @@ dependencies {
 
     compile group: 'net.milkbowl.vault', name: 'Vault', version: '1.5.6'
     compile group: 'fr.neatmonster', name: 'nocheatplus', version: '3.13.7-RC'
-    compile group: 'de.diddiz', name: 'logblock', version: 'dev-SNAPSHOT'
+    compile(group: 'de.diddiz', name: 'logblock', version: 'dev-SNAPSHOT') {
+        exclude group: 'com.sk89q', module: 'worldedit'
+    }
 
     compile group: 'com.zaxxer', name: 'HikariCP', version: '3.2.0'
 
