--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 
     compile group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.1.0-SNAPSHOT'
     compile group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
-    compile(group: 'com.sk89q', name: 'commandbook', version: '2.5-SNAPSHOT') {
+    compile(group: 'com.sk89q', name: 'commandbook', version: '3.0-SNAPSHOT') {
         exclude group: 'com.sk89q', module: 'worldedit'
     }
     compile(group: 'com.sk89q.craftbook', name: 'craftbook', version: '3.9-SNAPSHOT') {
@@ -78,6 +78,10 @@ dependencies {
     }
 
     compile group: 'com.zaxxer', name: 'HikariCP', version: '3.2.0'
+
+    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
+    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
+    annotationProcessor "com.google.guava:guava:21.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
