--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compile group: 'gg.packetloss', name: 'Pitfall', version: '2.1.2'
 
     compile group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.15.1-R0.1-SNAPSHOT'
-    compile group: 'org.spigotmc', name: 'spigot', version: '1.15.1-R0.1-SNAPSHOT'
+    compile group: 'com.destroystokyo.paper', name: 'paper', version: '1.15.1-R0.1-SNAPSHOT'
 
     compile group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.1.0-SNAPSHOT'
     compile group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
