--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile group: 'gg.packetloss', name: 'OSBL', version: '1.1-SNAPSHOT'
     compile group: 'com.garbagemule', name: 'mobarena', version: '0.104.3-SNAPSHOT'
     compile group: 'gg.packetloss', name: 'Pitfall', version: '2.1.2'
+    compile group: 'gg.packetloss', name: 'bukkit-text', version: '1.0'
 
     compile group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.15.1-R0.1-SNAPSHOT'
     compile group: 'com.destroystokyo.paper', name: 'paper', version: '1.15.1-R0.1-SNAPSHOT'
@@ -108,6 +109,9 @@ shadowJar {
         include(dependency("gg.packetloss:OSBL"))
         relocate ("com.zaxxer.hikari", "gg.packetloss.hikari") {
             include(dependency("com.zaxxer:HikariCP"))
+        }
+        relocate ("gg.packetloss.bukkittext", "gg.packetloss.grindstone.bukkittext") {
+            include(dependency("gg.packetloss:bukkit-text"))
         }
     }
 }
