Update project to JDK 16

--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,13 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
-    }
+plugins {
+    id "com.github.johnrengelman.shadow" version "7.0.0"
 }
 
 apply plugin: 'java'
 apply plugin: 'maven-publish'
-apply plugin: 'com.github.johnrengelman.shadow'
 
 repositories {
     mavenCentral()
     mavenLocal()
-    jcenter()
 
     maven {
         name 'Packet Loss Gaming Repository'
@@ -102,8 +94,8 @@ tasks.withType(JavaCompile).configureEach {
 group = 'gg.packetloss'
 version = '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 publishing {
     publications {
