--- a/build.gradle
+++ b/build.gradle
@@ -66,8 +66,8 @@ dependencies {
     }
 
     compileOnly group: 'com.sk89q', name: 'commandbook', version: '3.0-SNAPSHOT'
-    compileOnly group: 'com.zachsthings.libcomponents', name: 'libcomponents-core', version: '1.3.0-SNAPSHOT'
-    compileOnly group: 'com.zachsthings.libcomponents', name: 'libcomponents-bukkit', version: '1.3.0-SNAPSHOT'
+    compileOnly group: 'com.zachsthings.libcomponents', name: 'libcomponents-core', version: '1.3.0'
+    compileOnly group: 'com.zachsthings.libcomponents', name: 'libcomponents-bukkit', version: '1.3.0'
 
     compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0"
 
