--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,10 @@ dependencies {
     compileOnly group: 'gg.packetloss', name: 'mc-mail-box', version: '1.16.5.1'
 
     implementation group: 'gg.packetloss', name: 'open-boss', version: '1.3.1'
-    implementation group: 'gg.packetloss', name: 'hackbook', version: '1.18.1.0'
-    implementation group: 'gg.packetloss', name: 'bukkit-text', version: '1.18.1.0'
+    implementation group: 'gg.packetloss', name: 'hackbook', version: '1.19.3.0'
+    implementation group: 'gg.packetloss', name: 'bukkit-text', version: '1.19.3.0'
 
-    compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.18.1-R0.1-SNAPSHOT'
+    compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.19.3-R0.1-SNAPSHOT'
 
     compileOnly group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.2.0-SNAPSHOT'
     compileOnly group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
@@ -70,7 +70,7 @@ dependencies {
     compileOnly group: 'com.zachsthings.libcomponents', name: 'libcomponents-core', version: '1.3.0'
     compileOnly group: 'com.zachsthings.libcomponents', name: 'libcomponents-bukkit', version: '1.3.0'
 
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0"
+    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "5.0.0-SNAPSHOT"
 
     compileOnly group: 'net.milkbowl.vault', name: 'Vault', version: '1.5.6'
     compileOnly group: 'fr.neatmonster', name: 'nocheatplus', version: '3.13.7-RC'
@@ -83,7 +83,7 @@ dependencies {
 
     compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
     annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
-    annotationProcessor "com.google.guava:guava:21.0"
+    annotationProcessor 'com.google.guava:guava:21.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
