--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "7.0.0"
+    id "io.github.goooler.shadow" version "8.1.8"
 }
 
 apply plugin: 'java'
@@ -52,15 +52,17 @@ dependencies {
     compileOnly group: 'gg.packetloss', name: 'mc-mail-box', version: '1.16.5.1'
 
     implementation group: 'gg.packetloss', name: 'open-boss', version: '1.3.1'
-    implementation group: 'gg.packetloss', name: 'hackbook', version: '1.20.1.0'
-    implementation group: 'gg.packetloss', name: 'bukkit-text', version: '1.20.1.0'
+    implementation group: 'gg.packetloss', name: 'hackbook', version: '1.21.0.4'
+    implementation group: 'gg.packetloss', name: 'bukkit-text', version: '1.21.0.0'
 
-    compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.20.1-R0.1-SNAPSHOT'
+    compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.21-R0.1-SNAPSHOT'
 
-    compileOnly group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.2.0-SNAPSHOT'
-    compileOnly group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
+    compileOnly(group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.3.4')
+    compileOnly(group: 'com.sk89q.worldguard', name: 'worldguard-bukkit', version: '7.0.10')
     compileOnly(group: 'com.sk89q', name: 'craftbook', version: '3.10.2-SNAPSHOT') {
         exclude group: 'com.sk89q', module: 'worldguard'
+        exclude group: 'com.destroystokyo.paper', module: 'paper-api'
+        exclude group: 'net.milkbowl.vault', module: 'VaultAPI'
         exclude group: 'org.spigotmc', module: 'spigot-api'
         exclude group: 'org.spigotmc', module: 'spigot'
     }
@@ -97,7 +99,7 @@ version = '1.0-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
